--- a/project/project.tex
+++ b/project/project.tex
@@ -13,8 +13,8 @@
 % Here's where you edit the Class, Exam, Date, etc.
 \newcommand{\class}{NPRE 397}
 \newcommand{\term}{Fall 2016}
-\newcommand{\assignment}{Nuclear Fuel Cycle Project}
-\newcommand{\duedate}{2016.12.07}
+\newcommand{\assignment}{Design Considerations for Accident Tolerant Fuels}
+\newcommand{\duedate}{2016.12.16}
 %\newcommand{\timelimit}{50 Minutes}
 
 \newcommand{\nth}{n\ensuremath{^{\text{th}}} }
@@ -51,16 +51,15 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-For \class, your total grade will be earned through a comprehensive project. It 
-is intended to tie together the lessons of the course with an independent 
-analysis of a relevant topic in the context of nuclear power economics and fuel 
-management (or, the nuclear fuel cycle). The project will be assessed as 
-independent research work, much like a journal article undergoes peer review. I 
-will be looking for : 
+For \class, your total grade will be earned through a comprehensive design 
+project. It is intended to tie together your nuclear engineering knowledge with 
+your engineering design expertise through an independent analysis of design
+considerations for accident tolerant fuels.  The project will be assessed as
+independent design and research work, much like a journal article undergoes
+peer review. I will be looking for : 
 
 \begin{itemize}
-\item Relevance
-\item Novelty
+\item Novelty and Creativity
 \item Technical Detail 
 \item Analytic Rigor
 \item Verifiability
@@ -75,10 +74,19 @@ This work will consist of two deliverables, a proposal and a final report.
 \begin{questions}
 \addpoints
 % intro
-\question[10] \textbf{Proposal: Due 2016.10.10}
+\question[10] \textbf{Proposal: Due 2016.10.12}
 
-To help determine of reasonable scope, the first step of the project will be a
-proposal. Once you submit this proposal, I will respond with feedback. Much
+To help determine of reasonable scope, the first step of the project will be a 
+proposal outlining the modeling methods and approach for modeling reactivity 
+response of fuel that could improve accident tolerance in future reactor 
+designs. The focus is to determine the tolerance of fuels during reactor 
+accidents and the ability to inhibit an unconstrained temperature increase. 
+This will be assessed by calculating the reactivity feedback coefficients of 
+fuel with different parameters.  Simulations will be done using Monte Carlo 
+methods.  At least one type of fuel type will be characterized, but others may 
+be investigated as well.
+
+Once you submit this proposal, I will respond with feedback. Much
 like a conference abstract, the proposal should meet the following guidelines:
 
 \begin{itemize}
@@ -94,18 +102,14 @@ like a conference abstract, the proposal should meet the following guidelines:
 \item Propose an outline of the analysis, software, data, and/or conclusions that will be delivered.
 \end{itemize}
 
-Please arrange at least one short meeting with me before the project proposal 
-so that I can help you refine your topic. I would be happy to provide feedback 
-on a draft of your proposal (once) before it is due. For your guidance, a list 
-of example topics appears at the end of this document. Feel free to choose one 
-of these.  However, choosing a creative topic of your choice is 
-encouraged.
-
-
 \question[90] \textbf{Final Report: Due \duedate}
 
-Prepare a final document in the style of a journal article or conference 
-proceedings. It should meet the following guidelines:
+A final report detailing the findings of the simulations will be presented at
+the end of the semester.  The report will outline the parameters varied and the
+resulting reactivity changes.  The report will contain the description of the
+methods used and proposed follow up work.  Prepare the final document in the
+style of a journal article or conference proceedings. It should meet the
+following guidelines:
 
 \begin{itemize}
 \item Minimum 3000 words.
@@ -116,7 +120,7 @@ proceedings. It should meet the following guidelines:
 \item State the question you answered.
 \item Comprehensively report and cite the current state of the art in the literature.
 \item Motivate the problem, explaining its relevance.
-\item Describe the approach, methods, and other elements of your solution.
+\item Describe the approach, methods, and other elements of your design recommendations.
 \item Describe in detail: the analysis, software, data, conclusions produced in this work.
 \item Include publication quality graphs and figures.
 \item Cite and provide data and code generated for this work sufficient to reproduce the conclusions.
@@ -125,71 +129,6 @@ proceedings. It should meet the following guidelines:
 \end{itemize}
 
 \end{questions}
-
-
-\section*{Topic Examples}
-For your guidance, a list of example topics appears here.
-Feel free to choose one of these.  However, choosing a creative topic 
-of your choice is encouraged. This section may be expanded if I have new ideas 
-as the semester progresses.
-
-\paragraph{Impact of a Zero Emissions Tax Credit} New York state recently 
-(summer 2016) implemented a zero emissions tax credit. It was enough to save 
-the Fitzpatrick nuclear generating station. Were the parameters of that 
-state-level to be implemented accross the US, either federally or individually 
-in each state, the risk of owning and building nuclear plants would decrease. 
-Quantify the change in risk. Predict the impacts to the nuclear industry. Would 
-it be enough to save at-risk plants? Would we likely see an increase in new 
-builds? What other impacts might we see?
-
-\paragraph{The Likelihood and Implications of the Duck Curve} The California
-Independent System Operators published the ``duck chart.'' This curve,
-describing the predicted mid-day overgeneration of grid-bound electricity,
-caused by installations of solar, primarily, makes load-following generation
-sources or storage methods necessary. A few questions that would make
-interesting projects on this topic include:  
-\begin{itemize}
-\item What is the level of alarm appropriate in reaction to this chart and why? 
-\item Can you suggest a novel strategy that would allow nuclear generation to
-be adapted to load follow? 
-\item What would the impact to nuclear power be if this situation is allowed to
-proceed and there is no curtailment of variable generation sources? 
-\item How could current storage technologies smooth this curve?
-\end{itemize}
-
-\paragraph{Liquid vs. Solid Fuelled Molten Salt Reactor Source Term and Release
-Pathways} Reactor designs involving molten salts can have either solid fuel or
-fluidized fuel. In the fluid fuel case, proponents are often heard to say they
-can't melt down because they operate safely at a melted state. Compare the
-source term and release pathways of a containment breach in a solid fuelled
-salt reactor vs. a fluid fuelled one. 
-
-\paragraph{Economics of Uranium Extraction of Seawater} A great deal of
-research is being undertaken to lower the costs of uranium extraction from
-seawater. Can you replicate the results of a previous calculation of those
-costs? To what extent are those results sensitive to uncertain assumptions
-(assumptions of a political, technical, or economic nature, it matters not.)
-
-\paragraph{Metrics for Proliferation in the Nuclear Fuel Cycle} Suggest a
-metric that captures proliferation concern in a nuclear fuel cycle scenario.
-
-\paragraph{Assessment of Dose To Workers in Reprocessing Schemes} Propose a model for
-calculating the dose impact on workers within an arbitrary fuel cycle. Include
-dose due to all steps of the fuel cycle, including reprocessing and disposal.
-Compare and contrast fuel cycle strategies with and without reprocessing. 
-
-\paragraph{Fuel Cycle Transition Scenario} Choose one of the Evaluation Groups
-identified by the Fuel Cycle Options Evaluation and Screening. Use a simulator
-(e.g. Cyclus, CLASS, or Orion) or your own model to assess the
-time-to-transition from our current reactor fleet to 100\% deployment of the
-new technology (e.g. SFRs, MSRs, etc.)
-
-\paragraph{Repository Cost Estimation} Suggest a high level waste repository
-site. Suggest appropriate waste forms, waste packages, and other disposal
-system design features for this geology. Estimate construction rates, loading
-rates, transportation costs, and a closing timeline. With these estimates,
-defended by analysis, conduct a life cycle cost estimation of your proposed
-site.
 
 %\bibliographystyle{plain}
 %\bibliography{}
