--- a/project/project.tex
+++ b/project/project.tex
@@ -51,9 +51,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-For \class, your total grade will be earned through a comprehensive design 
-project. It is intended to tie together your nuclear engineering knowledge with 
-your engineering design expertise through an independent analysis of design
+For \class, you are asked to complete a comprehensive design project. It is 
+intended to tie together your nuclear engineering knowledge with your 
+engineering design expertise through an independent analysis of design 
 considerations for a nuclear system of some kind. 
 
 % ---------------------------------------------
@@ -67,25 +67,26 @@ as the semester progresses.
 \paragraph{Front End Fuel Cycle Support for Advanced Reactors} Many new reactor
 design ideas have peculiar fuel needs (TRISO particles, doubly heterogeneous
 TRISO pebbles, liquid salt fuels, higher enrichments). What technology gaps
-currently exist \& can you solve them? (Hint, every one of these is expensive.
-Some have proliferation questions as well.)
+currently exist \& can you solve them? Note that currently, many of these 
+involve processes that are prohibitively expensive. Some raise proliferation 
+concerns as well.
 
-\paragraph{Lithium 7 Isotopic Separation} Lithium 7 isotopic separation (a.k.a.
+\paragraph{$^{7}Li$ Isotopic Separation} Isotopic separation (a.k.a.
 enrichment) of Lithium 7 is necessary for appropriate neutronic behavior in an
 FHR or MSR. How expensive will it be for some of these reactors and what are
-the neutronic impacts of 6Li impurities in such a reactor? Can you balance
-performance and cost by designing a salt reactor less sensitive to 6Li? 
+the neutronic impacts of $^6Li$ impurities in such a reactor? Can you balance
+performance and cost by designing a salt reactor less sensitive to $^6Li$? 
 
-\paragraph{Creative Laser Enrichment Applications} Laser enrichment
-technologies allows for enrichment of more than just uranium (for example,
-plutonium, boron, etc...) what clever uses of enrichment technology might
-improve our world? What isotopes might you separate? How would that work? What
-enrichment methods would you use? What would the separation efficiencies be?
-How much money could you make?
+\paragraph{Creative Enrichment Applications} Some enrichment technologies allow 
+for enrichment of more than just uranium (for example, plutonium, boron, 
+nickel, etc...) what clever uses of enrichment technology might improve our 
+world? What isotopes might you separate? How would that work? What enrichment 
+methods would you use? What would the separation efficiencies be?  How much 
+money would you make? What would you do with the tails? Is there a market?
 
 \paragraph{Cheaper Reprocessing} How can pyroprocessing be made 10x cheaper
 than today's PUREX? How can PUREX be made less expensive than it is now?
-
+        
 \paragraph{Impact of a Zero Emissions Tax Credit} New York state recently
 (summer 2016) implemented a zero emissions tax credit. It was enough to save
 the Fitzpatrick nuclear generating station. Were the parameters of that
@@ -119,9 +120,10 @@ salt reactor vs. a fluid fuelled one.
 
 \paragraph{Economics of Uranium Extraction of Seawater} A great deal of
 research is being undertaken to lower the costs of uranium extraction from
-seawater. Can you replicate the results of a previous calculation of those
+seawater. Can you replicate or improve the results of a previous calculation of those
 costs? To what extent are those results sensitive to uncertain assumptions
-(assumptions of a political, technical, or economic nature, it matters not.)
+(assumptions of a political, technical, or economic nature, it matters not.) 
+What design improvements could reduce the costs?
 
 \paragraph{Metrics for Proliferation in the Nuclear Fuel Cycle} Suggest a
 metric that captures proliferation concern in a nuclear fuel cycle scenario.
@@ -144,8 +146,8 @@ rates, transportation costs, and a closing timeline. With these estimates,
 defended by analysis, conduct a life cycle cost estimation of your proposed
 site.
 
-
-%\bibliographystyle{plain}
-%\bibliography{}
+\nocite{*}
+\bibliographystyle{plain}
+\bibliography{sr-design}
 
 \end{document}
